examples/test/testpolicy2476.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2476
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key14: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value47
          key23: value2
          key27: value15
      podSelector:
        matchLabels:
          key46: value37
